[gd_scene load_steps=115 format=2]

[ext_resource path="res://Characters/Player/Spritesheets/walk_right.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Characters/Player/States/Motion/Walking.gd" type="Script" id=3]
[ext_resource path="res://Characters/Player/States/Motion/Idle.gd" type="Script" id=4]
[ext_resource path="res://Characters/Player/Spritesheets/walk_left.png" type="Texture" id=5]
[ext_resource path="res://Characters/Player/Spritesheets/walk_up.png" type="Texture" id=6]
[ext_resource path="res://Characters/Player/Spritesheets/walk_down.png" type="Texture" id=7]
[ext_resource path="res://Characters/Player/Sprite.gd" type="Script" id=8]
[ext_resource path="res://Characters/Player/Spells/SpellEmitter/SpellEmitter.tscn" type="PackedScene" id=9]
[ext_resource path="res://Characters/Player/Spells/Fireball/Fireball.tscn" type="PackedScene" id=10]
[ext_resource path="res://Characters/Player/Spritesheets/fireball_right.png" type="Texture" id=11]
[ext_resource path="res://Characters/Player/Spritesheets/fireball_up.png" type="Texture" id=12]
[ext_resource path="res://Characters/Player/Spritesheets/fireball_down.png" type="Texture" id=13]
[ext_resource path="res://Characters/Player/Spritesheets/fireball_left.png" type="Texture" id=14]
[ext_resource path="res://Characters/Player/States/SpellCasting.gd" type="Script" id=15]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=16]
[ext_resource path="res://Characters/Player/States/Rolling.gd" type="Script" id=19]
[ext_resource path="res://Characters/Player/Spritesheets/roll_up.png" type="Texture" id=20]
[ext_resource path="res://Characters/Player/Spritesheets/roll_left.png" type="Texture" id=21]
[ext_resource path="res://Characters/Player/Spritesheets/roll_right.png" type="Texture" id=22]
[ext_resource path="res://Characters/Player/Spritesheets/roll_down.png" type="Texture" id=23]
[ext_resource path="res://Characters/Player/Spritesheets/die.png" type="Texture" id=27]
[ext_resource path="res://Characters/Player/States/Dying.gd" type="Script" id=28]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.5516
height = 34.8244

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 20 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 20 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 20 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 20 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 20 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 20 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 20 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 27 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 27 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 27 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 27 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 27 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 27 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 27 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 27 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 27 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 27 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 27 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 23 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 23 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 23 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 23 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 23 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 23 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 23 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 23 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 21 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 21 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 21 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 21 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 21 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 21 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 21 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 22 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 22 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 22 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 22 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 22 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 22 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 22 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=91]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk_down",
"speed": 12.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "roll_up",
"speed": 12.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "walk_left",
"speed": 12.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": false,
"name": "die",
"speed": 12.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "walk_right",
"speed": 12.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "roll_down",
"speed": 12.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": false,
"name": "roll_left",
"speed": 12.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "walk_up",
"speed": 12.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": false,
"name": "fireball_up",
"speed": 12.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ), SubResource( 76 ) ],
"loop": false,
"name": "fireball_right",
"speed": 12.0
}, {
"frames": [ SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ) ],
"loop": false,
"name": "roll_right",
"speed": 12.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": false,
"name": "fireball_down",
"speed": 12.0
}, {
"frames": [ SubResource( 88 ), SubResource( 89 ), SubResource( 90 ) ],
"loop": false,
"name": "fireball_left",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 7
collision_mask = 0
script = ExtResource( 16 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
DEBUG = false
acting_body_path = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
fireball = ExtResource( 10 )

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
fireball = ExtResource( 10 )
move_speed = 425

[node name="SpellCasting" type="Node" parent="StateMachine"]
script = ExtResource( 15 )
spell = ExtResource( 10 )

[node name="SpellTimer" type="Timer" parent="StateMachine/SpellCasting"]
one_shot = true

[node name="Dying" type="Node" parent="StateMachine"]
script = ExtResource( 28 )
duration = 2.0

[node name="Timer" type="Timer" parent="StateMachine/Dying"]
one_shot = true

[node name="Rolling" type="Node" parent="StateMachine"]
script = ExtResource( 19 )

[node name="RollTimer" type="Timer" parent="StateMachine/Rolling"]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="StateMachine/Rolling"]
one_shot = true

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 91 )
animation = "walk_down"
script = ExtResource( 8 )

[node name="SpellEmitter" parent="." instance=ExtResource( 9 )]
[connection signal="state_entered" from="StateMachine/Idle" to="Sprite" method="_on_Idle_state_entered"]
[connection signal="direction_changed" from="StateMachine/Walking" to="Sprite" method="_on_Walking_direction_changed"]
[connection signal="state_entered" from="StateMachine/Walking" to="Sprite" method="_on_Walking_state_entered"]
[connection signal="spell_emitted" from="StateMachine/SpellCasting" to="SpellEmitter" method="_on_SpellCasting_spell_emitted"]
[connection signal="state_entered" from="StateMachine/SpellCasting" to="Sprite" method="_on_SpellCasting_state_entered"]
[connection signal="timeout" from="StateMachine/SpellCasting/SpellTimer" to="StateMachine/SpellCasting" method="_on_Timer_timeout"]
[connection signal="state_entered" from="StateMachine/Dying" to="Sprite" method="_on_Dying_state_entered"]
[connection signal="timeout" from="StateMachine/Dying/Timer" to="StateMachine/Dying" method="_on_Timer_timeout"]
[connection signal="state_entered" from="StateMachine/Rolling" to="Sprite" method="_on_Rolling_state_entered"]
[connection signal="timeout" from="StateMachine/Rolling/RollTimer" to="StateMachine/Rolling" method="_on_RollTimer_timeout"]
